--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,11 @@ D/example.o
 Elm/elm-stuff
 Erlang/erl_crash.dump
 Erlang/example.beam
+F*/out
+F*/example
 F#/bin
 F#/obj
+Fortran/example
 Haskell/out
 Haskell/example
 Haxe/example.n
@@ -28,8 +31,12 @@ Java/Example.class
 Kotlin/META-INF
 Kotlin/ExampleKt.class
 Nim/example
+Objective-C/example
+Pascal/src/example
+Pascal/src/example.o
 PureScript/.spago
 PureScript/output
+V/src/example
 Reason/example.ml
 Rust/example
 Scala/Example.class
