update: Tcl and Pony

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ Nim/example
 Objective-C/example
 Pascal/src/example
 Pascal/src/example.o
+Pony/example
 PureScript/.spago
 PureScript/output
 V/src/example
