update: Apl, Awk and VimScript

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ Ada/example
 Agda/src/MAlonzo
 Agda/src/example
 Agda/src/example.agdai
+Apl/.apl.history
 Cobol/example
 Coq/.example.aux
 Coq/example.glob
