update: Brainfuck, CLIPS, Curry and Dafny

--- a/.gitignore
+++ b/.gitignore
@@ -11,18 +11,22 @@ BSV/sim
 BH/src/example.v
 BH/src/example.bo
 BH/sim
+Brainfuck/example
+C/example
+C#/bin
+C#/obj
+C++/example
 Cobol/example
 Coq/.example.aux
 Coq/example.glob
 Coq/example.vo
 Coq/example.vok
 Coq/example.vos
-C/example
-C#/bin
-C#/obj
-C++/example
+Curry/src/.curry
 D/example
 D/example.o
+Dafny/src/example.dll
+Dafny/src/example.runtimeconfig.json
 Elm/elm-stuff
 Erlang/erl_crash.dump
 Erlang/example.beam
