update: Genie, Gleam, Hy, Ink, Io, J, Janet, LFE, LOLCODE, M4, Mercury and MoonScript

--- a/.gitignore
+++ b/.gitignore
@@ -35,12 +35,19 @@ F*/example
 F#/bin
 F#/obj
 Fortran/example
+Genie/example
+Gleam/build
+Gleam/manifest.toml
 Haskell/out
 Haskell/example
 Haxe/example.n
+Hy/src/__pycache__
 Java/Example.class
 Kotlin/META-INF
 Kotlin/ExampleKt.class
+Mercury/Mercury
+Mercury/example
+Mercury/example.mh
 Nim/example
 Objective-C/example
 Pascal/src/example
