rename: Bluespec Haskell/SystemVerilog

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@ Agda/src/MAlonzo
 Agda/src/example
 Agda/src/example.agdai
 Apl/.apl.history
-BSV/src/example.v
-BSV/src/example.bo
-BSV/sim
-BH/src/example.v
-BH/src/example.bo
-BH/sim
+BluespecHaskell/src/example.v
+BluespecHaskell/src/example.bo
+BluespecHaskell/example
+BluespecSystemVerilog/src/example.v
+BluespecSystemVerilog/src/example.bo
+BluespecSystemVerilog/example
 Brainfuck/example
 C/example
 C#/bin
